# torchdata-xx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  binding.cpp  test.cpp
cmake/: torch.cmake
csrc/: audio.cpp  audio.h  dataset.cpp  dataset.h  functional.cpp  functional.h  sampler.cpp  sampler.h  tensor_buffer.h  tensor_utils.h  types.h
csrc/text/: en_data.h  phonemizer.cpp  phonemizer.h  utils.cpp  utils.h
datasetxx/LibriTTS/: config.py  sampler.py  shard.py
espeak-ng/: .gitignore  CMakeLists.txt
espeak-ng/cmake/: config.cmake  data.cmake
espeak-ng/src/: CMakeLists.txt  espeak-ng.cpp
espeak-ng/src/include/espeak-ng/: encoding.h  espeak_ng.h  espeak_ng_ctx.h  speak_lib.h
espeak-ng/src/libespeak-ng/: CMakeLists.txt  common.cpp  common.hpp  compiledata.cpp  compiledict.cpp  compiledict.hpp  context.cpp  context.hpp  dictionary.cpp  dictionary.hpp  encoding.cpp  error.cpp  error.hpp  espeak_api.cpp  espeak_command.hpp  ieee80.cpp  ieee80.hpp  intonation.cpp  intonation.hpp  langopts.cpp  langopts.hpp  mbrola.hpp  mnemonics.cpp  mnemonics.hpp  numbers.cpp  numbers.hpp  phoneme.cpp  phoneme.hpp  phonemelist.cpp  phonemelist.hpp  readclause.cpp  readclause.hpp  setlengths.cpp  setlengths.hpp  sintab.hpp  soundicon.cpp  soundicon.hpp  spect.cpp  spect.hpp  speech.cpp  (+17 more)
espeak-ng/src/ucd-tools/: CMakeLists.txt
espeak-ng/src/ucd-tools/src/include/ucd/: ucd.h
torchdataxx/: __init__.py  audio.py  config.py  extension.py  functional.py  json.py  memory_buffer.py  path.py  shard.py  stack.py  tensor_buffer.py  utils.py
